--- a/src/Home.css
+++ b/src/Home.css
@@ -13,7 +13,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0rem 2rem;
-    /* max-width: 1100px; */
+    max-width: 100%;
     gap: 0rem;
 }
   
